<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="org.scir.scir_android_app.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textViewTitle"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strTextViewGeoLocationStatus"
        android:id="@+id/textViewGeoLocationStatus"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/strScirBuildName"
        android:id="@+id/textViewScirBuildName"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/strSmartCityLogo" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:id="@+id/imageView"
        android:contentDescription="@string/strSmartCityView" />


    <!--
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" />

        <ImageView
        android:id="@+id/camera_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    -->


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:gravity="center" >

    <Button
        android:id="@+id/capture_infra_problem_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_report_infra_problems"
        android:background="#4e62ab"
        android:textColor="#c02020"
        android:textStyle="bold" />

    <Button
        android:id="@+id/check_problems_reported_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_view_problems_reported"
        android:background="#875252"
        android:textColor="#000000"
        android:textStyle="bold" />


    </LinearLayout>
    <Button
        android:id="@+id/check_location_services_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_btn_view_location_services"
        android:background="#875252"
        android:textColor="#000000"
        android:textStyle="bold" />

</LinearLayout>