<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#999999"
android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capturing_image"   />

    <FrameLayout
        android:id="@+id/camera_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/camera_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <SurfaceView
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/capture_infra_problem_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_image" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:layout_marginTop="@dimen/scir_activity_vertical_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center">

        <RadioGroup
            android:id="@+id/scirCtrlRadioGroupProblemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="90"
            android:layout_marginTop="0dp"
            >

            <LinearLayout
                android:layout_weight="3"
                android:weightSum="3"
                android:gravity="center_vertical|left"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/scirCtrlRadioSelectRoad"
                    android:gravity="center_vertical|left"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Road" />

                <RadioButton
                    android:id="@+id/scirCtrlRadioSelectSanitation"
                    android:gravity="center_vertical|left"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Sanitation" />

                <RadioButton
                    android:id="@+id/scirCtrlRadioSelectWater"
                    android:gravity="center_vertical|left"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Water" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="3"
                android:gravity="center_vertical|left"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/scirCtrlRadioSelectElectricity"
                    android:gravity="center_vertical|left"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Electricity" />

                <RadioButton
                    android:id="@+id/scirCtrlRadioSelectMissingKid"
                    android:gravity="center_vertical|left"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Missing Kids" />

                <RadioButton
                    android:id="@+id/scirCtrlRadioSelectOthers"
                    android:gravity="center_vertical|left"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Others" />
            </LinearLayout>

        </RadioGroup>


    </LinearLayout>



    <RatingBar
        android:id="@+id/scirCtrlRatingBar"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <!--
    <SeekBar
        android:id="@+id/scirCtrlSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/scirCtrlRatingBar"
        android:layout_gravity="center" />
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/scirCtrlButtonFeedback"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_weight="0.34" />
    </LinearLayout>

</LinearLayout>